# git-mirror

./: .pre-commit-config.yaml  Makefile  README.md  mkdocs.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: deploy.yml  docs.yml  test_and_check.yaml
docs/: CHANGELOG.md  README.md  gen_ref_pages.py
gitmirror/: config.py  exceptions.py  mirror.py  providers.py
gitmirror/operations/: file.py  git.py
gitmirror/services/: mirror.py
requirements/: all.txt  build.txt  check.txt  docs.txt  test.txt
tests/: test_config.py  test_mirror.py  test_providers.py
tests/operations/: test_file.py  test_git.py
tests/services/: test_mirror.py
