# Things that does not (yet) support pyproject.toml
[metadata]
name = git-file-mirror
version = file: version.txt
author = Victor Mariano Leite
author_email = marianoleite44@gmail.com
home_page = https://github.com/victor-mariano-leite/git-mirror
long_description = file: docs/README.md
long_description_content_type = text/markdown
[options]
packages = find:
install_requires =
    rich>=12
include_package_data=True


[flake8]
ignore = E203, E266, E501, W503
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4
exclude=__init__.py

[mypy]
files=gitmirror
ignore_missing_imports=true
